<resources>
    <string name="app_name">Calculator</string>
    <string name="percent">%</string>
    <string name="parentheses">( )</string>
    <string name="c">C</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="divide">÷</string>
    <string name="multiply">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="plus_minus">+/-</string>
    <string name="_0">0</string>
    <string name="point">,</string>
    <string name="equals">=</string>
    <string name="choose_theme">Choose theme:</string>
    <string name="standard_theme">Standard_theme</string>
    <string name="orange_theme">Orange theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="ok_button_text">OK</string>
</resources>