<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cat"
    android:padding="@dimen/layout_padding"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button_equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_another_backgroundTint"
        android:text="@string/equals"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:backgroundTint="@color/button_standart_backgroundTint"
        android:text="@string/point"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toBottomOf="@id/button_equals"
        app:layout_constraintEnd_toStartOf="@+id/button_equals" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:backgroundTint="@color/button_standart_backgroundTint"
        android:text="@string/_0"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toBottomOf="@id/button_equals"
        app:layout_constraintEnd_toStartOf="@+id/button_point" />

    <Button
        android:id="@+id/button_plus_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:backgroundTint="@color/button_standart_backgroundTint"
        android:text="@string/plus_minus"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toBottomOf="@id/button_equals"
        app:layout_constraintEnd_toStartOf="@+id/button_0" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_another_backgroundTint"
        android:text="@string/plus"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toTopOf="@+id/button_equals"
        app:layout_constraintEnd_toEndOf="@+id/button_equals" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_another_backgroundTint"
        android:text="@string/minus"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toTopOf="@+id/button_plus"
        app:layout_constraintEnd_toEndOf="@+id/button_equals" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_another_backgroundTint"
        android:text="@string/multiply"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintEnd_toEndOf="@+id/button_equals" />

    <Button
        android:id="@+id/button_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_another_backgroundTint"
        android:text="@string/divide"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toTopOf="@+id/button_multiply"
        app:layout_constraintEnd_toEndOf="@+id/button_equals" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:backgroundTint="@color/button_standart_backgroundTint"
        android:shape="ring"
        android:text="@string/_2"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@id/button_3" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:backgroundTint="@color/button_standart_backgroundTint"
        android:text="@string/_1"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toTopOf="@id/button_plus_minus"
        app:layout_constraintEnd_toStartOf="@+id/button_2" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:backgroundTint="@color/button_standart_backgroundTint"
        android:text="@string/_3"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toTopOf="@id/button_point"
        app:layout_constraintEnd_toStartOf="@id/button_plus" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:backgroundTint="@color/button_standart_backgroundTint"
        android:text="@string/_4"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_5" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:backgroundTint="@color/button_standart_backgroundTint"
        android:text="@string/_5"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintEnd_toStartOf="@id/button_6" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:backgroundTint="@color/button_standart_backgroundTint"
        android:text="@string/_6"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toTopOf="@+id/button_3"
        app:layout_constraintEnd_toStartOf="@id/button_minus" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:backgroundTint="@color/button_standart_backgroundTint"
        android:text="@string/_7"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_8" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:backgroundTint="@color/button_standart_backgroundTint"
        android:text="@string/_8"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_9" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:backgroundTint="@color/button_standart_backgroundTint"
        android:text="@string/_9"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toTopOf="@+id/button_6"
        app:layout_constraintEnd_toStartOf="@id/button_multiply" />

    <Button
        android:id="@+id/button_С"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:backgroundTint="@color/button_another_backgroundTint"
        android:text="@string/c"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_parentheses" />

    <Button
        android:id="@+id/button_parentheses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:backgroundTint="@color/button_another_backgroundTint"
        android:text="@string/parentheses"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toTopOf="@id/button_8"
        app:layout_constraintEnd_toStartOf="@+id/button_percent" />

    <Button
        android:id="@+id/button_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:backgroundTint="@color/button_another_backgroundTint"
        android:text="@string/percent"
        android:textSize="@dimen/button_standart_textSize"
        app:cornerRadius="@dimen/button_cornerRadius"
        app:layout_constraintBottom_toTopOf="@id/button_9"
        app:layout_constraintEnd_toStartOf="@id/button_divide" />

</androidx.constraintlayout.widget.ConstraintLayout>